--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
             <div class="menyu">
                 <a href="index.html" ID="#HOME">HOME</a>
                 <a href="menu.html">MENU</a>
-                <a href="about.html">ABOUT</a>
-                <a href="contact.html">CONTACT</a>
+                <a href="about.html">ABOUT US</a>
+                <a href="about.html#contact">CONTACT</a>
             </div>
         </nav>
     </header>
@@ -72,6 +72,46 @@
             </ol>
         </article>
     </section>
+
+     <!-- contact section  -->
+    <section class="contactsection" id="contact">
+        <div class="contactform">
+            <h3> Message Us</h3>
+            <form>
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+         <div class="contactinfo">
+    <h4> Get us through</h4>
+    <p>📍 luguruni, Dar es Salaam, Tanzania</p>
+    <p> 📞 Twahir: +255 655 553 323</p>
+    <p>📞  Hussein:+255 718 223 703</p>
+    <p>📞 Sarah:   +255 653 330 108</p>
+    <p>📞 Aisha:   +255 694 341 333</p>
+    
+        <p>Follow us:</p>
+        <div class="socialicons">
+             <p>
+    <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a> 
+    <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a> 
+    <a href="https://wa.me/255655553323" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+  </p>
+        </div>
+    </div>
+     <!-- events section  -->
+     <section class="events" id="contact">
+  <h2>Upcoming Events</h2>
+  <ul>
+    <li>📅 9 july to 8 August 2025 – Offer for first 5 customers for Biriani</li>
+    <li>📅 20 June 2025 –  Sasha Food Exihibition at Forodhani,Zanzibar</li>
+    <li>📅 10 July 2025 – Offering Food Stuffs for street children and orphans  </li>
+  </ul>
+</section>
+
+</section>
     <footer>
         <div class="footerdown">
             <P class="paragraph">&copy; copyright 2025. Sasha Foods. <br>
