--- a/menu.html
+++ b/menu.html
@@ -17,8 +17,8 @@
        <div class="menyu">
        <a href="index.html">HOME</a>
       <a href="menu.html">MENU</a>
-      <a href="about.html">ABOUT</a>
-      <a href="contact.html">CONTACT</a>
+      <a href="about.html">ABOUT US</a>
+      <a href="about.html#contact">CONTACT</a>
         </div>
      
     </nav>
