--- a/about.html
+++ b/about.html
@@ -102,12 +102,12 @@
         </div>
     </div>
      <!-- events section  -->
-     <section class="events" id="contact">
+     <section class="events">
   <h2>Upcoming Events</h2>
   <ul>
-    <li>📅 9 july to 8 August 2025 – Offer for first 5 customers for Biriani</li>
-    <li>📅 20 June 2025 –  Sasha Food Exihibition at Forodhani,Zanzibar</li>
-    <li>📅 10 July 2025 – Offering Food Stuffs for street children and orphans  </li>
+    <li> 9 july to 8 August 2025 – Offer for first 5 customers for Biriani</li>
+    <li>20 October 2025 –  Sasha Food Exihibition at Forodhani,Zanzibar</li>
+    <li>10 July 2025 – Offering Food Stuffs for street children and orphans</li>
   </ul>
 </section>
 
